[package]
name = "yippie"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proof of concept dont use"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
show-image = {version = "0.13", features = ["image"]}
